# fast-api-mongo

./: README.md  pyproject.toml  todo.txt
src/: app.py
src/models/: user.py
src/routes/: user.py
src/services/: user.py
tests/: test_user_api.py
