[tool.poetry]
name = "fast-api-app"
version = "0.1.0"
description = ""
authors = ["Allen8Kane <allen8kane@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
pymongo = "^3.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests = "^2.26.0"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
